--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Explain why join Tables are needed in Many-to-Many relationships"
+    "* Explain one-to-many and many-to-many joins as well as implications for the size of query results"
    ]
   },
   {
