--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "If you had 2 offices for Boston, and 513 restaurants, your join would have 1026 rows for Boston; 513 for each restaurant along with the first office and 513 for each restaurant with the second office. Three offices in Boston would similarly produce 1539 rows; one for each unique combination of restaurants and offices. This is where you should be particularly careful of many to many joins as the resulting set size can explode drastically potentially consuming vast amounts of memory and other resources.  \n",
     "\n",
-    "<img src='Database-Schema.png' width=550>\n",
+    "<img src='images/Database-Schema.png' width=550>\n",
     "\n",
     "## Connecting to the Database"
    ]
@@ -1272,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
