--- a/index.ipynb
+++ b/index.ipynb
@@ -8,13 +8,14 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Previously, you learned about the typical case where one joins on a primary or foreign key. In this section, you'll explore other types of joins using One-to-Many and Many-to-many relationships!\n",
+    "Previously, you learned about the typical case where one joins on a primary or foreign key. In this section, you'll explore other types of joins using one-to-many and many-to-many relationships!\n",
     "\n",
     "## Objectives\n",
     "\n",
     "You will be able to:\n",
     "\n",
     "* Explain one-to-many and many-to-many joins as well as implications for the size of query results\n",
+    "* Query data using one-to-many and many-to-many joins\n",
     "\n",
     "## One-to-Many and Many-to-Many relationships\n",
     "\n",
@@ -1262,7 +1263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, you expanded your join knowledge to One-to-Many and Many-to-many joins!"
+    "In this section, you expanded your join knowledge to one-to-many and many-to-many joins!"
    ]
   }
  ],
@@ -1282,7 +1283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
