fix data types in all tables

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,12 +176,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  officeCode           city            phone              addressLine1  \\\n",
-       "0          1  San Francisco  +1 650 219 4782         100 Market Street   \n",
-       "1          2         Boston  +1 215 837 0825          1550 Court Place   \n",
-       "2          3            NYC  +1 212 555 3000      523 East 53rd Street   \n",
-       "3          4          Paris  +33 14 723 4404  43 Rue Jouffroy D'abbans   \n",
-       "4          5          Tokyo  +81 33 224 5000               4-1 Kioicho   \n",
+       "   officeCode           city            phone              addressLine1  \\\n",
+       "0           1  San Francisco  +1 650 219 4782         100 Market Street   \n",
+       "1           2         Boston  +1 215 837 0825          1550 Court Place   \n",
+       "2           3            NYC  +1 212 555 3000      523 East 53rd Street   \n",
+       "3           4          Paris  +33 14 723 4404  43 Rue Jouffroy D'abbans   \n",
+       "4           5          Tokyo  +81 33 224 5000               4-1 Kioicho   \n",
        "\n",
        "  addressLine2       state country postalCode territory  \n",
        "0    Suite 300          CA     USA      94080        NA  \n",
@@ -308,19 +308,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  employeeNumber   lastName firstName extension  \\\n",
-       "0           1002     Murphy     Diane     x5800   \n",
-       "1           1056  Patterson      Mary     x4611   \n",
-       "2           1076   Firrelli      Jeff     x9273   \n",
-       "3           1088  Patterson   William     x4871   \n",
-       "4           1102     Bondur    Gerard     x5408   \n",
+       "   employeeNumber   lastName firstName extension  \\\n",
+       "0            1002     Murphy     Diane     x5800   \n",
+       "1            1056  Patterson      Mary     x4611   \n",
+       "2            1076   Firrelli      Jeff     x9273   \n",
+       "3            1088  Patterson   William     x4871   \n",
+       "4            1102     Bondur    Gerard     x5408   \n",
        "\n",
-       "                             email officeCode reportsTo              jobTitle  \n",
-       "0     dmurphy@classicmodelcars.com          1                       President  \n",
-       "1   mpatterso@classicmodelcars.com          1      1002              VP Sales  \n",
-       "2   jfirrelli@classicmodelcars.com          1      1002          VP Marketing  \n",
-       "3  wpatterson@classicmodelcars.com          6      1056  Sales Manager (APAC)  \n",
-       "4     gbondur@classicmodelcars.com          4      1056   Sale Manager (EMEA)  "
+       "                             email  officeCode reportsTo              jobTitle  \n",
+       "0     dmurphy@classicmodelcars.com           1                       President  \n",
+       "1   mpatterso@classicmodelcars.com           1      1002              VP Sales  \n",
+       "2   jfirrelli@classicmodelcars.com           1      1002          VP Marketing  \n",
+       "3  wpatterson@classicmodelcars.com           6      1056  Sales Manager (APAC)  \n",
+       "4     gbondur@classicmodelcars.com           4      1056   Sale Manager (EMEA)  "
       ]
      },
      "execution_count": 4,
@@ -495,19 +495,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  officeCode           city            phone       addressLine1 addressLine2  \\\n",
-       "0          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "1          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "2          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "3          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "4          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "   officeCode           city            phone       addressLine1 addressLine2  \\\n",
+       "0           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "1           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "2           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "3           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "4           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
        "\n",
-       "  state country postalCode territory employeeNumber   lastName firstName  \\\n",
-       "0    CA     USA      94080        NA           1002     Murphy     Diane   \n",
-       "1    CA     USA      94080        NA           1056  Patterson      Mary   \n",
-       "2    CA     USA      94080        NA           1076   Firrelli      Jeff   \n",
-       "3    CA     USA      94080        NA           1143        Bow   Anthony   \n",
-       "4    CA     USA      94080        NA           1165   Jennings    Leslie   \n",
+       "  state country postalCode territory  employeeNumber   lastName firstName  \\\n",
+       "0    CA     USA      94080        NA            1002     Murphy     Diane   \n",
+       "1    CA     USA      94080        NA            1056  Patterson      Mary   \n",
+       "2    CA     USA      94080        NA            1076   Firrelli      Jeff   \n",
+       "3    CA     USA      94080        NA            1143        Bow   Anthony   \n",
+       "4    CA     USA      94080        NA            1165   Jennings    Leslie   \n",
        "\n",
        "  extension                           email reportsTo            jobTitle  \n",
        "0     x5800    dmurphy@classicmodelcars.com                     President  \n",
@@ -664,19 +664,19 @@
        "3         1:10         Red Start Diecast   \n",
        "4         1:10   Motor City Art Classics   \n",
        "\n",
-       "                                  productDescription quantityInStock buyPrice  \\\n",
-       "0  This replica features working kickstand, front...            7933    48.81   \n",
-       "1  Turnable front wheels; steering function; deta...            7305    98.58   \n",
-       "2  Official Moto Guzzi logos and insignias, saddl...            6625    68.99   \n",
-       "3  Model features, official Harley Davidson logos...            5582    91.02   \n",
-       "4  Features include: Turnable front wheels; steer...            3252    85.68   \n",
+       "                                  productDescription  quantityInStock  \\\n",
+       "0  This replica features working kickstand, front...             7933   \n",
+       "1  Turnable front wheels; steering function; deta...             7305   \n",
+       "2  Official Moto Guzzi logos and insignias, saddl...             6625   \n",
+       "3  Model features, official Harley Davidson logos...             5582   \n",
+       "4  Features include: Turnable front wheels; steer...             3252   \n",
        "\n",
-       "     MSRP  \n",
-       "0   95.70  \n",
-       "1  214.30  \n",
-       "2  118.94  \n",
-       "3  193.66  \n",
-       "4  136.00  "
+       "   buyPrice    MSRP  \n",
+       "0     48.81   95.70  \n",
+       "1     98.58  214.30  \n",
+       "2     68.99  118.94  \n",
+       "3     91.02  193.66  \n",
+       "4     85.68  136.00  "
       ]
      },
      "execution_count": 6,
@@ -949,26 +949,26 @@
        "3         1:10         Red Start Diecast   \n",
        "4         1:10   Motor City Art Classics   \n",
        "\n",
-       "                                  productDescription quantityInStock buyPrice  \\\n",
-       "0  This replica features working kickstand, front...            7933    48.81   \n",
-       "1  Turnable front wheels; steering function; deta...            7305    98.58   \n",
-       "2  Official Moto Guzzi logos and insignias, saddl...            6625    68.99   \n",
-       "3  Model features, official Harley Davidson logos...            5582    91.02   \n",
-       "4  Features include: Turnable front wheels; steer...            3252    85.68   \n",
+       "                                  productDescription  quantityInStock  \\\n",
+       "0  This replica features working kickstand, front...             7933   \n",
+       "1  Turnable front wheels; steering function; deta...             7305   \n",
+       "2  Official Moto Guzzi logos and insignias, saddl...             6625   \n",
+       "3  Model features, official Harley Davidson logos...             5582   \n",
+       "4  Features include: Turnable front wheels; steer...             3252   \n",
        "\n",
-       "     MSRP                                    textDescription htmlDescription  \\\n",
-       "0   95.70  Our motorcycles are state of the art replicas ...                   \n",
-       "1  214.30  Attention car enthusiasts: Make your wildest c...                   \n",
-       "2  118.94  Our motorcycles are state of the art replicas ...                   \n",
-       "3  193.66  Our motorcycles are state of the art replicas ...                   \n",
-       "4  136.00  Attention car enthusiasts: Make your wildest c...                   \n",
+       "   buyPrice    MSRP                                    textDescription  \\\n",
+       "0     48.81   95.70  Our motorcycles are state of the art replicas ...   \n",
+       "1     98.58  214.30  Attention car enthusiasts: Make your wildest c...   \n",
+       "2     68.99  118.94  Our motorcycles are state of the art replicas ...   \n",
+       "3     91.02  193.66  Our motorcycles are state of the art replicas ...   \n",
+       "4     85.68  136.00  Attention car enthusiasts: Make your wildest c...   \n",
        "\n",
-       "  image  \n",
-       "0        \n",
-       "1        \n",
-       "2        \n",
-       "3        \n",
-       "4        "
+       "  htmlDescription image  \n",
+       "0                        \n",
+       "1                        \n",
+       "2                        \n",
+       "3                        \n",
+       "4                        "
       ]
      },
      "execution_count": 8,
@@ -1075,7 +1075,7 @@
        "      <td>97562</td>\n",
        "      <td>USA</td>\n",
        "      <td>1165</td>\n",
-       "      <td>210500.00</td>\n",
+       "      <td>210500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1099,7 +1099,7 @@
        "      <td>94217</td>\n",
        "      <td>USA</td>\n",
        "      <td>1165</td>\n",
-       "      <td>64600.00</td>\n",
+       "      <td>64600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1123,7 +1123,7 @@
        "      <td>94217</td>\n",
        "      <td>USA</td>\n",
        "      <td>1165</td>\n",
-       "      <td>84600.00</td>\n",
+       "      <td>84600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1147,7 +1147,7 @@
        "      <td>90003</td>\n",
        "      <td>USA</td>\n",
        "      <td>1166</td>\n",
-       "      <td>90700.00</td>\n",
+       "      <td>90700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1171,7 +1171,7 @@
        "      <td>92561</td>\n",
        "      <td>USA</td>\n",
        "      <td>1166</td>\n",
-       "      <td>11000.00</td>\n",
+       "      <td>11000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1179,40 +1179,33 @@
        "</div>"
       ],
       "text/plain": [
-       "  officeCode           city            phone       addressLine1 addressLine2  \\\n",
-       "0          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "1          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "2          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "3          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
-       "4          1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "   officeCode           city            phone       addressLine1 addressLine2  \\\n",
+       "0           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "1           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "2           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "3           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
+       "4           1  San Francisco  +1 650 219 4782  100 Market Street    Suite 300   \n",
        "\n",
-       "  state country postalCode territory customerNumber     ...      \\\n",
-       "0    CA     USA      94080        NA            124     ...       \n",
-       "1    CA     USA      94080        NA            129     ...       \n",
-       "2    CA     USA      94080        NA            161     ...       \n",
-       "3    CA     USA      94080        NA            205     ...       \n",
-       "4    CA     USA      94080        NA            219     ...       \n",
+       "  state country postalCode territory  customerNumber  ... contactLastName  \\\n",
+       "0    CA     USA      94080        NA             124  ...          Nelson   \n",
+       "1    CA     USA      94080        NA             129  ...          Murphy   \n",
+       "2    CA     USA      94080        NA             161  ...       Hashimoto   \n",
+       "3    CA     USA      94080        NA             205  ...           Young   \n",
+       "4    CA     USA      94080        NA             219  ...           Young   \n",
        "\n",
-       "  contactLastName contactFirstName       phone               addressLine1  \\\n",
-       "0          Nelson            Susan  4155551450            5677 Strong St.   \n",
-       "1          Murphy            Julie  6505555787  5557 North Pendale Street   \n",
-       "2       Hashimoto             Juri  6505556809          9408 Furth Circle   \n",
-       "3           Young            Julie  6265557265         78934 Hillside Dr.   \n",
-       "4           Young             Mary  3105552373           4097 Douglas Av.   \n",
+       "  contactFirstName       phone               addressLine1 addressLine2  \\\n",
+       "0            Susan  4155551450            5677 Strong St.                \n",
+       "1            Julie  6505555787  5557 North Pendale Street                \n",
+       "2             Juri  6505556809          9408 Furth Circle                \n",
+       "3            Julie  6265557265         78934 Hillside Dr.                \n",
+       "4             Mary  3105552373           4097 Douglas Av.                \n",
        "\n",
-       "  addressLine2           city postalCode country salesRepEmployeeNumber  \\\n",
-       "0                  San Rafael      97562     USA                   1165   \n",
-       "1               San Francisco      94217     USA                   1165   \n",
-       "2                  Burlingame      94217     USA                   1165   \n",
-       "3                    Pasadena      90003     USA                   1166   \n",
-       "4                    Glendale      92561     USA                   1166   \n",
-       "\n",
-       "  creditLimit  \n",
-       "0   210500.00  \n",
-       "1    64600.00  \n",
-       "2    84600.00  \n",
-       "3    90700.00  \n",
-       "4    11000.00  \n",
+       "            city postalCode country salesRepEmployeeNumber creditLimit  \n",
+       "0     San Rafael      97562     USA                   1165      210500  \n",
+       "1  San Francisco      94217     USA                   1165       64600  \n",
+       "2     Burlingame      94217     USA                   1165       84600  \n",
+       "3       Pasadena      90003     USA                   1166       90700  \n",
+       "4       Glendale      92561     USA                   1166       11000  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
@@ -1283,7 +1276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
