Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "We'll start with this familiar ERD:\n",
     "\n",
-    "<img src='images/Database-Schema.png' width=550>\n",
+    "<img src='https://curriculum-content.s3.amazonaws.com/data-science/images/Database-Schema.png' width=550>\n",
     "\n",
     "For example, let's say you have another table `restaurants` that has many columns including `name`, `city`, and `rating`. If you were to join this `restaurants` table with the offices table using the shared city column, you might get some unexpected behavior. That is, in the office table, there is only one office per city. However, because there will likely be more than one restaurant for each of these cities in your second table, you will get unique combinations of offices and restaurants from your join. If there are 513 restaurants for Boston in your restaurant table and 1 office for Boston, your joined table will have each of these 513 rows, one for each restaurant along with the one office.\n",
     "\n",
